--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     }
 
     .wrapper {
-   	overflow-x: hidden;
-      }
+    }
 
     .c-animator {
       margin-bottom: 0;
@@ -50,10 +49,10 @@
 
     .container {
       width: 100%;
-      padding-right: 1rem;
       padding-left: 1rem;
       margin-right: auto;
       margin-left: auto;
+      height: 150vh;
     }
 
     .logo {
@@ -326,7 +325,7 @@
     }
 
     .ui-hero.ui-tittle::after {
-      display: block;
+      /*display: block;
       content: '';
       position: absolute;
       left: -8rem;
@@ -335,7 +334,7 @@
       background-color: #FFF;
       -webkit-transform: rotate(-10deg);
       transform: rotate(-9deg);
-      z-index: 1;
+      z-index: 1;*/
     }
   </style>
 </head>
