--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
       margin-left: auto;
       height: 150vh;
     }
+    @media (max-width: 480px) {
+      .container {
+        height: 120vh;
+      }
+    }
 
     .logo {
       display: inline-block;
