--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 
     #clock {
       margin-top: 50px;
+      display: flex;
+      justify-content: center;
     }
 
     .label {
@@ -188,6 +190,7 @@
 
       #clock {
         display: flex;
+        justify-content: center;
       }
     }
 
