--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     }
 
     .form-email .input-form-mail {
-      padding: 8px 1rem 8px 1.5rem;
+      padding: 8px 1rem 10px 1.5rem;
       border-top-left-radius: 2rem;
       border-bottom-left-radius: 2rem;
       outline: none;
@@ -494,5 +494,16 @@
   countdown('Jan 04 2019 23:05:40 GMT-0500', 'clock', '¡Ya empezó!');
 
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-68656854-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-68656854-4');
+</script>
+
+
 </body>
 </html>
