--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       width: 100%;
       margin-right: auto;
       margin-left: auto;
-      height: 110vh;
+      height: 100vh;
     }
 
     @media (max-width: 480px) {
@@ -81,8 +81,8 @@
     .logo {
       display: inline-block;
       width: 350px;
-      height: 200px;
-      margin: 0 auto 2rem auto;
+      height: 152px;
+      margin: 0;
       overflow: hidden;
       background-size: cover;
       background: url("assets/yeify_logo.png") no-repeat center;
