--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="manifest" href="assets/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="assets/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#1668ff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
   <meta name="google-site-verification" content="fAb_d17_T_OcMdsTI-0LDl2nCCKBZAF8BC4sPr2L13M" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Righteous" rel="stylesheet">
