--- a/index.html
+++ b/index.html
@@ -2,23 +2,10 @@
 <html>
 <head>
   <title>Yeify | Coming soon</title>
-  <link rel="apple-touch-icon" sizes="57x57" href="assets/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="assets/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+  <link rel="icon" type="image/png" href="assets/favicon.ico">
   <link rel="manifest" href="assets/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="assets/ms-icon-144x144.png">
-  <meta name="theme-color" content="#00c6ff">
+  <meta name="theme-color" content="#4ac39d">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=contain">
   <meta name="google-site-verification" content="fAb_d17_T_OcMdsTI-0LDl2nCCKBZAF8BC4sPr2L13M" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Righteous" rel="stylesheet">
@@ -39,7 +26,7 @@
     }
 
     .ui-hero.c-animator {
-      background: linear-gradient(45deg, #1668ff, #00c6ff);
+      background: #ffffff;
       animation: BackgroundGradient 30s ease infinite;
     }
 
@@ -85,7 +72,7 @@
       margin: 0;
       overflow: hidden;
       background-size: cover;
-      background: url("assets/yeify_logo.png") no-repeat center;
+      background: url("assets/yeify_logo.svg") no-repeat center;
     }
 
     .heading {
@@ -95,14 +82,14 @@
       color: #FFF;
       text-align: center;
       font-family: 'Open Sans', sans-serif;
-    }
+    }yeify_logo
 
     .paragraph {
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 2%;
       max-width: 800px;
-      color: #FFF;
+      color: rgb(68,68,68);
       text-align: center;
       font-family: 'Open Sans', sans-serif;
     }
@@ -132,7 +119,7 @@
       width: 85px;
       height: 80px;
       box-shadow: 0 5px 10px rgba(0, 9, 128, 0.035), 0 7px 18px rgba(0, 9, 128, 0.05);
-      background-color: rgba(255, 255, 255, 0.075);
+      background-color: #4ac39d62;
       padding: 8px 0 4px 0;
       margin-left: 1rem;
       border-radius: .5rem;
@@ -182,7 +169,7 @@
     }
 
     .heading-text {
-      color: #1668ff;
+      color: #4ac39d;
       font-size: 25px;
       font-family: 'Open Sans', sans-serif;
     }
@@ -274,7 +261,7 @@
     }
 
     .btn-color {
-      background: linear-gradient(45deg, #1668ff, #00c6ff);
+      background: linear-gradient(45deg, #4ac39d, #00c6ff);
       outline: none;
     }
 
