--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     }
 
     .shadow-card {
-      box-shadow: 0 7px 15px rgba(0, 9, 128, 0.05), 0 12px 28px rgba(0, 9, 128, 0.075);
+      7px 7px 15px rgba(0, 9, 128, 0.05), 7px 12px 28px rgba(0, 9, 128, 0.075);
     }
 
     .ui-card .header-card {
@@ -496,7 +496,7 @@
     }, 1000)
   };
 
-  countdown('March 1 2019 00:00:00 GMT-0500', 'clock', '¡Ya empezó!');
+  countdown('March 30 2019 00:00:00 GMT-0500', 'clock', 'Check us on product hunt');
 
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
